--- a/app/frontend/src/pages/layout/Layout.module.css
+++ b/app/frontend/src/pages/layout/Layout.module.css
@@ -5,9 +5,9 @@
 }
 
 .header {
-  background-color: #5c6bc0; /* Daha açık bir arka plan rengi */
+  background-color: #5c6bc0;
   color: white;
-  padding: 10px 0; /* Başlık için ek padding */
+  padding: 10px 0;
 }
 
 .headerContainer {
@@ -26,12 +26,12 @@
 
 .headerLogo {
   height: 40px;
-  margin-right: 10px; /* Logoya sağda boşluk ekleyin */
+  margin-right: 10px;
 }
 
 .headerTitle {
   font-weight: 600;
-  font-size: 1.2em; /* Başlık font boyutu */
+  font-size: 1.2em;
 }
 
 .headerNavList {
@@ -44,13 +44,12 @@
   color: white;
   text-decoration: none;
   opacity: 0.75;
-  margin: 0 15px; /* Linkler arasında boşluk /
-    transition: opacity 300ms ease-in-out; / Yumuşak geçiş efekti */
+  margin: 0 15px;
 }
 
 .headerNavPageLink:hover {
   opacity: 1;
-  text-decoration: underline; /* Hover durumunda alt çizgi */
+  text-decoration: underline;
 }
 
 .headerNavPageLinkActive {
@@ -66,5 +65,5 @@
 .microsoftLogo,
 .githubLogo {
   height: 23px;
-  margin-left: 10px; /* Logolar arasında boşluk */
+  margin-left: 10px;
 }
