--- a/app/frontend/src/pages/layout/Layout.module.css
+++ b/app/frontend/src/pages/layout/Layout.module.css
@@ -1,69 +1,68 @@
 .layout {
-  display: flex;
-  flex-direction: column;
-  height: 100%;
+    display: flex;
+    flex-direction: column;
+    height: 100%;
 }
 
 .header {
-  background-color: #5c6bc0;
-  color: white;
-  padding: 10px 0;
+    background-color: #5c6bc0; /* Daha açık bir arka plan rengi */
+    color: white;
+    padding: 10px 0; /* Başlık için ek padding */
 }
 
 .headerContainer {
-  display: flex;
-  align-items: center;
-  justify-content: space-around;
-  margin: 0 12px;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    margin: 0 12px;
 }
 
 .headerTitleContainer {
-  display: flex;
-  align-items: center;
-  color: white;
-  text-decoration: none;
+    display: flex;
+    align-items: center;
+    color: white;
+    text-decoration: none;
 }
 
 .headerLogo {
-  height: 40px;
-  margin-right: 10px;
+    height: 40px;
+    margin-right: 10px; /* Logoya sağda boşluk ekleyin */
 }
 
 .headerTitle {
-  font-weight: 600;
-  font-size: 1.2em;
+    font-weight: 600;
+    font-size: 1.2em; /* Başlık font boyutu */
 }
 
 .headerNavList {
-  display: flex;
-  list-style: none;
-  padding-left: 0;
+    display: flex;
+    list-style: none;
+    padding-left: 0;
 }
 
 .headerNavPageLink {
-  color: white;
-  text-decoration: none;
-  opacity: 0.75;
-  margin: 0 15px;
+    color: white;
+    text-decoration:none;
+	opacity: 0.75;
+	margin: 0 15px;
 }
 
 .headerNavPageLink:hover {
-  opacity: 1;
-  text-decoration: underline;
+opacity: 1;
+text-decoration: underline; /* Hover durumunda alt çizgi */
 }
 
 .headerNavPageLinkActive {
-  color: white;
-  text-decoration: none;
+color: white;
+text-decoration: none;
 }
 
 .headerRightText {
-  font-weight: normal;
-  margin-left: 40px;
+font-weight: normal;
+margin-left: 40px;
 }
 
-.microsoftLogo,
-.githubLogo {
-  height: 23px;
-  margin-left: 10px;
+.microsoftLogo, .githubLogo {
+height: 23px;
+margin-left: 10px; /* Logolar arasında boşluk */
 }
