--- a/app/frontend/src/pages/oneshot/OneShot.module.css
+++ b/app/frontend/src/pages/oneshot/OneShot.module.css
@@ -1,28 +1,10 @@
-/* Define CSS variables for theme consistency */
-:root {
-    --main-font-size: 1rem;
-    --heading-font-size: 4rem;
-    --subheading-font-size: 3rem;
-    --primary-font-weight: 600;
-    --container-max-width: 800px;
-    --panel-width: 600px;
-    --primary-margin: 20px;
-    --input-padding: 10px;
-    --settings-button-margin: 20px;
-    --transition-speed: 0.3s;
-    --border-radius: 8px;
-    --primary-color: #850f34; /* Crimson's brand color */
-    --background-color: #fff;
-    --text-color: #333;
-    --separator-color: #ddd;
-}
-
 .oneshotContainer {
     display: flex;
     flex: 1;
     flex-direction: column;
     align-items: center;
     font-size: var(--main-font-size);
+    animation: fadeIn 0.5s ease-in-out;
 }
 
 .oneshotTopSection {
@@ -67,19 +49,19 @@
     color: var(--text-color);
     border-radius: var(--border-radius);
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-    margin: var(--primary-margin) 0;
+    margin: var(--primary-margin) auto;
 }
 
 .oneshotAnalysisPanel {
     width: var(--panel-width);
-    margin-left: var(--primary-margin);
+    margin: var(--primary-margin) auto;
 }
 
 .oneshotSettingsSeparator {
     height: 1px;
     background-color: var(--separator-color);
     margin-top: var(--primary-margin);
-    width: 100%;
+    width: calc(100% - 2 * var(--primary-margin));
 }
 
 .settingsButton {
@@ -91,9 +73,12 @@
     border: none;
     border-radius: var(--border-radius);
     cursor: pointer;
-    transition: background-color var(--transition-speed);
+    transition:
+        transform var(--transition-speed) ease-in-out,
+        background-color var(--transition-speed) ease;
 }
 
 .settingsButton:hover {
     background-color: darken(var(--primary-color), 10%);
+    transform: scale(var(--hover-scale));
 }
